[dev]improve implementations
- Syntax changes. A new parser in ParserNew.hs

change from (f x y) to f(x,y)
change from (fn x y -> <body>) to (fn(x,y) => <body>)
functions can still be curried, like f(x)(y)(z)

- EFix constructor for recursive and mutual recursive functions
for example:

letrec
  f(x) = iadd(g(x),1);
  g(x) = isub(f(x),1);
in
  f(42)
end

(this will circle forever, of cource)

- EIfte for if-then-else branch

--- a/EoC-lab.cabal
+++ b/EoC-lab.cabal
@@ -32,8 +32,10 @@ executable EoC-lab
         Syntax
         , Interp
         , Parser
+        , ParserNew
         , Printer
         , Repl
+        , Backend
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
