[dev]A Simple Hindley-Milner Typechecker
- implementing a simple Hindley-Milner typechecker
- improve repl
- fix some bug of 'EFix' in 'interp' function

--- a/EoC-lab.cabal
+++ b/EoC-lab.cabal
@@ -34,6 +34,7 @@ executable EoC-lab
         , Parser
         , ParserNew
         , Printer
+        , TypeCheck
         , Repl
         , Backend
 
